--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,21 @@ body{
 	display: flex;
 	justify-content: center;
 }
+
+.project{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	flex: 1;
+	height: 200px;
+}
+
+.project img{
+	width: 40px;
+	height: auto;
+}
+
+.project .description{
+	text-align: center;
+	font-size: 14px;
+}
